<resources>
    <string name="app_name">SkinDiseaseDetector</string>
    <string name="on_submit_msg">Check out your Inbox, you will receive an email containing link where you can reset your password</string>
    <string name="default_web_client_id">391889693828-3bm58daumnfbtebt2hags6se8h3klhnr.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acne_cause">Acne is primarily caused by the overproduction of sebum, which can clog hair follicles and lead to acne lesions. Clogged pores can also result from the accumulation of dead skin cells. Additionally, the presence of Propionibacterium acnes bacteria within these clogged pores can lead to inflammation and infection. Hormonal fluctuations, particularly during puberty, menstruation, or pregnancy, can further exacerbate oil production and trigger acne. Other contributing factors include genetics, dietary choices, stress, and certain medications.</string>
    <string name="acne_symptoms">The symptoms of acne vary in severity and include several types of lesions. Whiteheads are closed pores filled with oil, while blackheads are open pores that appear dark due to oxidation. Pimples, or pustules, are red bumps with a yellow or white pus-filled center. In more severe cases, cysts and nodules may form as painful lumps beneath the skin. Acne can also cause redness, swelling, and scarring, impacting a persons appearance and self-esteem.</string>
    <string name="acne_treatment">Effective treatment for acne often begins with topical solutions such as benzoyl peroxide and salicylic acid, which help reduce oiliness and unclog pores. For more severe cases, oral medications like antibiotics can combat bacteria and inflammation, while isotretinoin is reserved for the most persistent cases. In addition to medications, lifestyle changes such as using non-comedogenic products, maintaining a gentle skin care routine, and adjusting diet can also aid in prevention and management. Advanced treatments like chemical peels, laser therapy, and corticosteroid injections may be recommended for persistent or severe acne. </string>
    <string name="eczema_cause">Eczema, or atopic dermatitis, is often linked to a combination of genetic and environmental factors. Individuals with a family history of eczema, allergies, or asthma are more prone to developing this condition. An impaired skin barrier that fails to retain moisture and protect against irritants, allergens, and pathogens can trigger eczema flare-ups. Environmental triggers such as harsh soaps, detergents, extreme temperatures, and allergens like pollen or pet dander can worsen symptoms. Stress and hormonal changes may also contribute to the severity of eczema.</string>
    <string name="eczema_symptoms">Eczema is characterized by dry, itchy, and inflamed skin, which can appear red or discolored. The affected areas may develop scaly patches, blisters, or crusts, particularly in flexural areas like the elbows and knees. Scratching the itchy skin can lead to further irritation, resulting in thickened or leathery patches known as lichenification. Eczema symptoms can fluctuate, with periods of flare-ups followed by remissions, and they may significantly impact daily life and well-being. In children, eczema may also affect sleep quality and lead to social or psychological challenges.</string>
    <string name="eczema_treatment">Treatment for eczema typically focuses on managing symptoms and preventing flare-ups. Topical corticosteroids are commonly prescribed to reduce inflammation and itching during flare-ups. Emollients or moisturizers are essential for maintaining skin hydration and barrier function; they should be applied regularly, even when symptoms are not present. In more severe cases, oral medications like antihistamines or immunosuppressants may be used to control symptoms. Additionally, identifying and avoiding triggers, as well as implementing a consistent skin care routine, can help manage the condition.</string>
    <string name="healthy_cause">Healthy C</string>
    <string name="healthy_symptoms">Healthy S</string>
    <string name="healthy_treatment">Healthy T</string>
    <string name="nail_fungus_cause">Nail fungus is primarily caused by fungal infections, with dermatophytes being the most common culprits. These fungi thrive in warm, moist environments, making places like public pools, locker rooms, and poorly ventilated shoes ideal breeding grounds. Other factors contributing to nail fungus include injury to the nail, weakened immune system, diabetes, and certain skin conditions like psoriasis. Additionally, improper nail care, such as not trimming nails regularly or wearing tight-fitting shoes, can increase the risk of developing a fungal infection. Fungal infections can also spread from person to person or from other infected areas of the body.</string>
    <string name="nail_fungus_symptoms">The symptoms of nail fungus can vary but often include discoloration of the nail, typically yellow or white, and a thickened, brittle appearance. Infected nails may also become distorted in shape and can separate from the nail bed (onycholysis). The surrounding skin might show signs of redness, swelling, and sometimes even pain. Foul odors may be present in more advanced cases, and the infection can spread to other nails or skin if left untreated. Symptoms can cause discomfort and embarrassment, affecting personal hygiene and self-esteem.</string>
    <string name="nail_fungus_treatment">Treating nail fungus can be challenging and often requires a combination of approaches. Topical antifungal treatments, such as creams or lacquers, are commonly prescribed and may be effective for mild cases. For more severe or persistent infections, oral antifungal medications like terbinafine or itraconazole may be necessary to eliminate the fungus from the nail and surrounding tissue. In some cases, the removal of the infected nail may be recommended to allow for the application of antifungal treatment directly to the nail bed. Maintaining proper foot hygiene, keeping nails trimmed and clean, and avoiding exposure to damp environments are also crucial for preventing recurrence.</string>
    <string name="psoriasis_cause">Psoriasis is a chronic autoimmune condition characterized by the rapid growth of skin cells, leading to thick, scaly patches. The exact cause is not fully understood, but it is believed to involve a combination of genetic predisposition and environmental triggers. Factors such as infections, stress, skin injuries, and certain medications can trigger or exacerbate psoriasis flare-ups. The immune system plays a crucial role in the development of psoriasis, with T cells mistakenly attacking healthy skin cells, resulting in inflammation and increased skin cell turnover. Family history also plays a significant role, as psoriasis often runs in families.</string>
    <string name="psoriasis_symptoms">The symptoms of psoriasis can vary widely among individuals but typically include raised, red patches covered with thick, silvery scales. These patches, known as plaques, can appear on various parts of the body, including the elbows, knees, scalp, and lower back. Psoriasis can also cause itching, burning, or soreness in affected areas. In some cases, it can lead to nail changes, such as pitting, discoloration, and separation from the nail bed. Psoriasis can also be associated with psoriatic arthritis, which causes joint pain and swelling.</string>
    <string name="psoriasis_treatment">Treating psoriasis often requires a multifaceted approach tailored to the severity and type of the condition. Mild cases may be managed with topical treatments, such as corticosteroids, vitamin D analogs, and retinoids, which help reduce inflammation and slow skin cell turnover. For moderate to severe cases, phototherapy (light therapy) and systemic medications, including biologics and oral immunosuppressants, may be recommended to control symptoms and reduce flare-ups. Lifestyle modifications, such as maintaining a healthy weight, managing stress, and avoiding known triggers, are also essential in managing the condition.</string>
    <string name="vitiligo_cause">Vitiligo is a skin disorder caused by the destruction or malfunction of melanocytes, the cells responsible for producing skin pigment (melanin). The exact cause is not fully understood, but it is thought to involve a combination of genetic, autoimmune, and environmental factors. In vitiligo, the immune system may mistakenly attack melanocytes, leading to loss of pigment in certain areas of the skin. Family history can increase the likelihood of developing vitiligo, and triggers like stress, skin trauma, or sunburn may exacerbate its onset. It is not contagious but can be associated with other autoimmune disorders, such as thyroid disease.</string>
    <string name="vitiligo_symptoms">Vitiligo is characterized by the appearance of white patches on the skin, which can vary in size and location. These depigmented patches are most commonly found on areas exposed to the sun, such as the face, hands, and arms, but they can occur anywhere on the body, including the inside of the mouth and the eyes. The condition is usually symmetrical but can also affect isolated areas. Over time, the patches may grow or spread, and hair in the affected areas can turn white. Although vitiligo is not physically painful, it can cause psychological distress due to changes in appearance.</string>
    <string name="vitiligo_treatment">While there is no cure for vitiligo, several treatments are available to help restore skin color or manage the condition. Topical corticosteroids and calcineurin inhibitors may be prescribed to help re-pigment small areas of affected skin. For more widespread vitiligo, light therapy (phototherapy) and laser treatments can stimulate melanocytes and promote re-pigmentation. In severe or extensive cases, depigmentation of the remaining pigmented skin may be an option to create a more uniform skin tone.</string>
    <string name="warts_cause">Warts are benign growths on the skin caused by the human papillomavirus (HPV). There are over 100 types of HPV, with some strains leading to common warts, plantar warts, and genital warts. The virus typically enters the body through small cuts or breaks in the skin, making areas of the body like the hands, feet, and face susceptible to infection. Warts are contagious and can spread through direct contact with an infected person or by touching contaminated surfaces. Factors such as a weakened immune system, frequent skin trauma, and certain environmental conditions can increase the likelihood of developing warts.</string>
    <string name="warts_symptoms">Warts appear as raised, rough growths on the skin that can vary in size and shape, depending on the type. Common warts typically occur on the hands and fingers and have a rough, grainy texture, while plantar warts, found on the soles of the feet, may be painful when walking. Flat warts are smaller and smoother, often appearing in clusters, commonly on the face or legs. Genital warts are flesh-colored or gray and can appear on the genital and anal areas. Although warts are generally painless, they can cause discomfort, especially if located in pressure-sensitive areas.</string>
    <string name="continue_txt">Continue</string>
    <string name="email_txt">Email</string>
    <string name="full_name">Full Name</string>
    <string name="passwrod">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="back">Back</string>
</resources>